# fileManagementSystem

./: CMakeLists.txt
includes/: commands.h
src/: commands.cpp  main.cpp
